MAPREDUCE-1611. Refresh nodes and refresh queues doesnt work with service authorization enabled. Contributed by Amar Kamat.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@941143 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1558,3 +1558,6 @@ Release 0.21.0 - Unreleased
     displays wrong error message about job ACLs. (Ravi Gummadi via vinodkv)
 
     MAPREDUCE-1727. TestJobACLs fails after HADOOP-6686. (Ravi Gummadi via vinodkv)
+
+    MAPREDUCE-1611. Refresh nodes and refresh queues doesnt work with service
+    authorization enabled. (Amar Kamat via vinodkv)
