MAPREDUCE-1546. Redirect all job pages to corresponding history page if job is not in JT memory. Contributed by Scott Chen.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@941179 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,9 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
+  MAPREDUCE-1546. Redirect all job pages to corresponding history page 
+  if job is not in JT memory. (Scott Chen via sharad)
+
   OPTIMIZATIONS
 
   BUG FIXES
