MAPREDUCE-1092. Enable assertions for unit tests. Contributed by Eli Collins
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@941506 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,8 +8,11 @@ Trunk (unreleased changes)
 
   IMPROVEMENTS
 
-  MAPREDUCE-1546. Redirect all job pages to corresponding history page 
-  if job is not in JT memory. (Scott Chen via sharad)
+    MAPREDUCE-1546. Redirect all job pages to corresponding history page
+    if job is not in JT memory. (Scott Chen via sharad)
+
+    MAPREDUCE-1092. Enable assertions for unit tests. (Eli Collins via
+    cdouglas)
 
   OPTIMIZATIONS
 
