MAPREDUCE-1680. Add a metric recording JobTracker heartbeats processed. Contributed by Dick King
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@941564 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -14,6 +14,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1092. Enable assertions for unit tests. (Eli Collins via
     cdouglas)
 
+    MAPREDUCE-1680. Add a metric recording JobTracker heartbeats processed.
+    (Dick King via cdouglas)
+
   OPTIMIZATIONS
 
   BUG FIXES
