MAPREDUCE-1610. Forrest documentation should be updated to reflect the changes in MAPREDUCE-856. Contributed by Ravi Gummadi.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@942764 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -770,6 +770,9 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1613. Install/deploy source jars to Maven repo 
     (Patrick Angeles via ddas)
 
+    MAPREDUCE-1610. Forrest documentation should be updated to reflect
+    the changes in MAPREDUCE-856. (Ravi Gummadi via vinodkv)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
