--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -76,6 +76,9 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1644. Remove Sqoop contrib module. (Aaron Kimball via cdouglas)
 
+    MAPREDUCE-1607. Task controller may not set permissions for a
+    task cleanup attempt's log directory (Amareshwari Sriramadasu via vinodkv)
+
   NEW FEATURES
 
     MAPREDUCE-706. Support for FIFO pools in the fair scheduler.
