MAPREDUCE-1532. Ensures that delegation tokens is obtained as the actual user when the proxy-user is used for submitting jobs. Also refactors the DelegationTokenToRenew class. Contributed by Devaraj Das.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@943358 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -23,6 +23,10 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1707. TaskRunner can get NPE in getting ugi from TaskTracker.
     (Vinod Kumar Vavilapalli)
+    
+    MAPREDUCE-1532. Ensures that delegation tokens is obtained as the
+    actual user when the proxy-user is used for submitting jobs. Also
+    refactors the DelegationTokenToRenew class. (ddas)
 
 Release 0.21.0 - Unreleased
 
