--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -17,6 +17,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1680. Add a metric recording JobTracker heartbeats processed.
     (Dick King via cdouglas)
 
+    MAPREDUCE-1761. FairScheduler allows separate configuration of node
+    and rack locality wait time (Scott Chen via dhruba)
+
   OPTIMIZATIONS
 
   BUG FIXES
