MAPREDUCE-1539. authorization checks for inter-server protocol (based on HADOOP-6600). Contributed by Boris Shkolnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@944082 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -20,6 +20,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1761. FairScheduler allows separate configuration of node
     and rack locality wait time (Scott Chen via dhruba)
 
+    MAPREDUCE-1539. authorization checks for inter-server protocol
+    (based on HADOOP-6600) (Boris Shkolnik via shv)
+
   OPTIMIZATIONS
 
   BUG FIXES
