MAPREDUCE-1617. Use IPv4 stack for unit tests. Contributed by Amar Kamat and Luke Lu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@946955 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -44,6 +44,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1662. Remove unused methods from TaskRunner. (Amareshwari
     Sriramadasu via cdouglas)
 
+    MAPREDUCE-1617. Use IPv4 stack for unit tests. (Amar Kamat and Luke Lu via
+    cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
