--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -26,6 +26,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1539. authorization checks for inter-server protocol
     (based on HADOOP-6600) (Boris Shkolnik via shv)
 
+    MAPREDUCE-1798. Names the configuration keys for the Kerberos
+    principals better. (Boris Shkolnik via ddas)
+
   OPTIMIZATIONS
 
   BUG FIXES
