MAPREDUCE-1354. Enhancements to JobTracker for better performance and scalability. Contributed by Arun C. Murthy & Richard King.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@947112 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -31,6 +31,9 @@ Trunk (unreleased changes)
 
   OPTIMIZATIONS
 
+    MAPREDUCE-1354. Enhancements to JobTracker for better performance and
+    scalability. (Arun C. Murthy & Richard King via acmurthy) 
+
   BUG FIXES
 
     MAPREDUCE-1707. TaskRunner can get NPE in getting ugi from TaskTracker.
