--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -108,6 +108,9 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1607. Task controller may not set permissions for a
     task cleanup attempt's log directory (Amareshwari Sriramadasu via vinodkv)
 
+    MAPREDUCE-1683. Remove JNI calls from ClusterStatus cstr. (Arun Murthy and
+    Luke Lu via cdouglas)
+
   NEW FEATURES
 
     MAPREDUCE-706. Support for FIFO pools in the fair scheduler.
