MAPREDUCE-1751. Change MapReduce to depend on Hadoop 'common' artifacts instead of 'core'.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@949090 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -783,6 +783,9 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1623. Apply audience and stability notations to Hadoop
     Map-Reduce. (tomwhite via acmurthy) 
 
+    MAPREDUCE-1751. Change MapReduce to depend on Hadoop 'common' artifacts
+    instead of 'core'. (tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
