MAPREDUCE-1372. ConcurrentModificationException in JobInProgress.  Contributed by Dick King and Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@949896 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1620,3 +1620,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1276. Correct flaws in the shuffle related to connection setup
     and failure attribution. (Amareshwari Sriramadasu via cdouglas)
+
+    MAPREDUCE-1372. ConcurrentModificationException in JobInProgress.
+    (Dick King and Amareshwari Sriramadasu via tomwhite)
