--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1623,3 +1623,5 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1372. ConcurrentModificationException in JobInProgress.
     (Dick King and Amareshwari Sriramadasu via tomwhite)
+
+    MAPREDUCE-118. Fix Job.getJobID(). (Amareshwari Sriramadasu via sharad)
