MAPREDUCE-1599. Fixes MRBench so that it reuses tokens across jobs correctly. Contributed by Jitendra Nath Pandey.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@950286 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -56,6 +56,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1617. Use IPv4 stack for unit tests. (Amar Kamat and Luke Lu via
     cdouglas)
 
+    MAPREDUCE-1599. Fixes MRBench so that it reuses tokens across jobs
+    correctly. (Jitendra Nath Pandey via ddas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
