MAPREDUCE-1836. Refresh for proxy superuser config (mr part for HDFS-1096). Contributed by Boris Shkolnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@951226 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -66,6 +66,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1599. Fixes MRBench so that it reuses tokens across jobs
     correctly. (Jitendra Nath Pandey via ddas)
 
+    MAPREDUCE-1836. Refresh for proxy superuser config (mr part for HDFS-1096).
+    (Boris Shkolnik via shv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
