MAPREDUCE-1545. Add timestamps for first task type launched in job summary. Contributed by Luke Lu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@951812 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -39,6 +39,9 @@ Trunk (unreleased changes)
     then streaming does not throw error. (Amareshwari Sriramadasu via
     vinodkv)
 
+    MAPREDUCE-1545. Add timestamps for first task type launched in job summary.
+    (Luke Lu via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
