MAPREDUCE-1533. Reduce overhead of logging and string manipulation during heartbeat processing. Contributed by Amar Kamat and Dick King
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@951832 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -48,6 +48,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1762. Add ability to set values of task counters. (Scott Chen via
     cdouglas)
 
+    MAPREDUCE-1533. Reduce overhead of logging and string manipulation during
+    heartbeat processing. (Amar Kamat and Dick King via cdouglas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
