MAPREDUCE-1697. Document the behavior of -file option and deprecate it in favour of -files option in streaming. Contributed by Amareshwari Sriramadasu.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@952548 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -825,6 +825,10 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1404.  Move Cluster-Setup and Single-Node-Setup Docs from
     MapReduce to Common.  (tomwhite)
 
+    MAPREDUCE-1697. Document the behavior of -file option and deprecate it
+    in favour of -files option in streaming. (Amareshwari Sriramadasu
+    via vinodkv)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
