HADOOP-6794. Move configuration and script files post split. Includes HDFS-1181, MAPREDUCE-1033.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@953490 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -829,6 +829,9 @@ Release 0.21.0 - Unreleased
     in favour of -files option in streaming. (Amareshwari Sriramadasu
     via vinodkv)
 
+    MAPREDUCE-1033. Resolve location of scripts and configuration files after
+    project split. (tomwhite)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
