--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -84,6 +84,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1505. Create RPC client on job submission, not in cstr of Job
     instance. (Dick King via cdouglas)
 
+    MAPREDUCE-1813. NPE in PipeMapred.MRErrorThread. (Ravi Gummadi via vinodkv)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
