MAPREDUCE-1516. JobTracker issues delegation tokens only if the user's authentication is Kerberos. Contributed by Jitendra Pandey.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@953879 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -51,6 +51,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1533. Reduce overhead of logging and string manipulation during
     heartbeat processing. (Amar Kamat and Dick King via cdouglas)
 
+    MAPREDUCE-1516. JobTracker issues delegation tokens only if the user's
+    authentication is Kerberos. (Jitendra Pandey via ddas)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
