MAPREDUCE-1018. Document changes to the memory management and scheduling model. Contributed by Hemanth Yamijala.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@954364 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -840,6 +840,9 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1033. Resolve location of scripts and configuration files after
     project split. (tomwhite)
 
+    MAPREDUCE-1018. Document changes to the memory management and scheduling
+    model. (Hemanth Yamijala via vinodkv)
+
   OPTIMIZATIONS
 
     MAPREDUCE-270. Fix the tasktracker to optionally send an out-of-band
