MAPREDUCE-1765. Correct streaming documentation for StreamXmlRecordReader. Contributed by Corinne Chandel.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@955130 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1550,3 +1550,6 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1606. TestJobACLs may timeout as there are no slots for launching
     JOB_CLEANUP task. (Ravi Gummadi via vinodkv)
+
+    MAPREDUCE-1765. Correct streaming documentation for StreamXmlRecordReader.
+    (Corinne Chandel via amareshwari)
