MAPREDUCE-1853. Adds caching for TaskAttemptContext in MultipleOutputs. Contributed by Torsten Curdt.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@955198 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -783,6 +783,9 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1610. Forrest documentation should be updated to reflect
     the changes in MAPREDUCE-856. (Ravi Gummadi via vinodkv)
 
+    MAPREDUCE-1853. Adds caching for TaskAttemptContext in MultipleOutputs.
+    (Torsten Curdt via amareshwari)
+
   BUG FIXES
 
     MAPREDUCE-878. Rename fair scheduler design doc to 
