MAPREDUCE-647. Update distcp forrest documentation to reflect the changes of HADOOP-5472, MAPREDUCE-642 and HADOOP-5620.  Contributed by Rodrigo Schmidt
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@956070 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -54,6 +54,10 @@ Trunk (unreleased changes)
     MAPREDUCE-1516. JobTracker issues delegation tokens only if the user's
     authentication is Kerberos. (Jitendra Pandey via ddas)
 
+    MAPREDUCE-647. Update distcp forrest documentation to reflect the changes
+    of HADOOP-5472, MAPREDUCE-642 and HADOOP-5620.  (Rodrigo Schmidt via
+    szetszwo)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
