MAPREDUCE-1774. Large-scale Automated Framework. Contributed by Sharad Agarwal, Sreekanth, Ramakrishnan, Konstantin Boudnik, at all.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@956666 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,9 @@ Trunk (unreleased changes)
 
   NEW FEATURES
 
+    MAPREDUCE-1774. Large-scale Automated Framework (Sharad Agarwal, Sreekanth
+    Ramakrishnan, Konstantin Boudnik, at all via cos)
+
     MAPREDUCE-1804. Stress-test tool for HDFS introduced in HDFS-708.
     (Joshua Harlow via shv)
 
