MAPREDUCE-1880. Fix BigDecimal.divide(..) in the pi example.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@956697 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1572,3 +1572,5 @@ Release 0.21.0 - Unreleased
 
     MAPREDUCE-1765. Correct streaming documentation for StreamXmlRecordReader.
     (Corinne Chandel via amareshwari)
+
+    MAPREDUCE-1880. Fix BigDecimal.divide(..) in the pi example.  (szetszwo)
