MAPREDUCE-1855. Makes the refresh methods (for groups and proxy users) independent of the client side configuration. Contributed by Boris Shkolnik.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@957086 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -161,6 +161,9 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1683. Remove JNI calls from ClusterStatus cstr. (Arun Murthy and
     Luke Lu via cdouglas)
 
+    MAPREDUCE-1855. Makes the refresh methods (for groups and proxy users) 
+    independent of the client side configuration. (Boris Shkolnik via ddas)
+
   NEW FEATURES
 
     MAPREDUCE-1774. Large-scale Automated Framework (Sharad Agarwal, Sreekanth
