MAPREDUCE-1868. Add a read and connection timeout to JobClient while pulling tasklogs. Contributed by Krishna Ramachandran.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@957279 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -60,6 +60,9 @@ Trunk (unreleased changes)
 
     MAPREDUCE-1851. Documents configuration parameters in streaming.
     (amareshwari)
+    
+    MAPREDUCE-1868. Add a read and connection timeout to JobClient while
+    pulling tasklogs. (Krishna Ramachandran via acmurthy)
 
   OPTIMIZATIONS
 
