MAPREDUCE-1857. Removes unused configuration parameters in streaming. Contributed by Amareshwari Sriramadasu
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@957437 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -114,6 +114,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1492. Delete  obsolete har files used on the parity files
     of hdfs raid. (Rodrigo Schmidt via dhruba)
 
+    MAPREDUCE-1857. Removes unused configuration parameters in streaming.
+    (amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
