--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -117,6 +117,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1857. Removes unused configuration parameters in streaming.
     (amareshwari)
 
+    MAPREDUCE-1887. MRAsyncDiskService now properly absolutizes volume root
+    paths. (Aaron Kimball via zshao)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
