MAPREDUCE-1876. Fixes TaskAttemptStartedEvent to correctly log event type for all task types. Contributed by Amar Kamat
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@957896 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -120,6 +120,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1887. MRAsyncDiskService now properly absolutizes volume root
     paths. (Aaron Kimball via zshao)
 
+    MAPREDUCE-1876. Fixes TaskAttemptStartedEvent to correctly log event type
+    for all task types. (Amar Kamat via amareshwari)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
