MAPREDUCE-1863. Fix NPE in Rumen when processing null CDF for failed task attempts. Contributed by Amar Kamat
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@958841 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -123,6 +123,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1876. Fixes TaskAttemptStartedEvent to correctly log event type
     for all task types. (Amar Kamat via amareshwari)
 
+    MAPREDUCE-1863. Fix NPE in Rumen when processing null CDF for failed task
+    attempts. (Amar Kamat via cdouglas)
+
 Release 0.21.0 - Unreleased
 
   INCOMPATIBLE CHANGES
