MAPREDUCE-1850. Includes job submit host information (name and ip) in jobconf and jobdetails display. Contributed by Krishna Ramachandran
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@958902 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -67,6 +67,9 @@ Trunk (unreleased changes)
     MAPREDUCE-1788. Ensure failure to setup CompletedJobStatusStore is not
     silently ignored by the JobTracker. (Krishna Ramachandran via acmurthy)
 
+    MAPREDUCE-1850. Includes job submit host information (name and ip) in
+    jobconf and jobdetails display (Krishna Ramachandran via amareshwari)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
