MAPREDUCE-1870. Harmonize MapReduce JAR library versions with Common and HDFS.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@959509 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1608,3 +1608,5 @@ Release 0.21.0 - Unreleased
     MAPREDUCE-1885. Revert FileSystem create method that takes CreateFlags
     (MapReduce part of HADOOP-6826). (Ravi Gummadi via tomwhite)
 
+    MAPREDUCE-1870. Harmonize MapReduce JAR library versions with Common and
+    HDFS. (tomwhite)
