MAPREDUCE-1893. Slive with multiple reducers. Contributed by Konstantin Shvachko.
git-svn-id: https://svn.apache.org/repos/asf/hadoop/mapreduce/trunk@959795 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -70,6 +70,8 @@ Trunk (unreleased changes)
     MAPREDUCE-1850. Includes job submit host information (name and ip) in
     jobconf and jobdetails display (Krishna Ramachandran via amareshwari)
 
+    MAPREDUCE-1893. Slive with multiple reducers. (shv)
+
   OPTIMIZATIONS
 
     MAPREDUCE-1354. Enhancements to JobTracker for better performance and
