--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -82,6 +82,9 @@ Trunk (unreleased changes)
 
   BUG FIXES
 
+    MAPREDUCE-1845. FairScheduler.tasksToPreempt() can return negative number.
+    (Scott Chen via matei)
+
     MAPREDUCE-1707. TaskRunner can get NPE in getting ugi from TaskTracker.
     (Vinod Kumar Vavilapalli)
     
